--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,12 +1,16 @@
 # Node modules
-node_modules/
+backend/node_modules/
+frontend/node_modules/
 
-# Environment variables
-.env
+# Environment files
+backend/.env
+frontend/.env
+
+# Build folders
+backend/dist/
+backend/build/
+frontend/dist/
+frontend/build/
 
 # Logs
 *.log
-
-# Build folders
-dist/
-build/
