Update backend scripts and dependencies

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 PORT=8000
-MONGODB_URL="mongodb://127.0.0.1:27017/privatechat2"
+MONGODB_URL="mongodb+srv://ayushkemni8912:ayush123@cluster0.1muyrlm.mongodb.net/mydata"
 JWT_SECRET="GDHDGUEGIGIGE"
 CLOUD_NAME="drwffwmuf"
 API_KEY="848672933968824"
